Workbench bug fixes, update readme and docs
